<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/covid" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:inputType="textCapCharacters"
            android:textSize="20sp"
            android:visibility="visible" />
<RadioGroup
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/RB1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/RB1" />

        <RadioButton
            android:id="@+id/RB2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RB2" />
</RadioGroup>
        <TextView
            android:id="@+id/TextArea1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/Area1" />
        <Button
            android:id="@+id/Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Submit"
            android:text="@string/Submit" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Start"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="Startbtn"
                android:text="@string/Start"
                android:visibility="gone" />

            <Button
                android:id="@+id/Cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="str"
                android:text="@string/Start"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>